<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityVeiw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_message" />

    <EditText
        android:id="@+id/cityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cityHint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_message"
        app:cornerRadius="5dp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        android:contentDescription="Blank" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>